@@ -26,6 +26,8 @@ devscripts (2.15.1+exp1) UNRELEASED; urgency=medium
     a file is matched by multiple patterns.  (Closes: #776318)
   * who-uploads:
     + Fix extraction of uploader's key id.
+    * Create a temporary GNUPGHOME to avoid “gpg --list-key” erroring when no
+      ~/.gnupg exists.  (Closes: #776209)
 
   [ Johannes Schauer ]
   * chdist: Also set Apt::Architectures to prevent foreign architectures from
